make sure code wraps

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -581,6 +581,7 @@ code, pre {
 
 code {
   padding: 0 3px;
+  word-break: break-all;
 }
 
 pre {
